--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -68,6 +68,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Recommandation générée\n",
+    "\n",
+    "What a great combination of interests! I'd be happy to suggest some destinations for a solo traveler like you in May, with a moderate budget, who loves culture, museums, and good food.\n",
+    "\n",
+    "Here are a few options:\n",
+    "\n",
+    "1. **Prague, Czech Republic**: Prague is an excellent choice for a solo traveler. The city has a rich cultural heritage, with numerous museums (e.g., the National Museum of Prague) and historical landmarks like Charles Bridge and St. Vitus Cathedral. You can enjoy traditional Czech cuisine like goulash, dumplings, and pastries at reasonable prices.\n",
+    "\n",
+    "Cost: Hostel dorms from €15/night (~ $17 USD), meals from €5-10 (~ $6-12 USD)\n",
+    "\n",
+    "2. **Barcelona, Spain**: Barcelona is a vibrant city with a wide range of cultural attractions (e.g., the Picasso Museum, the National Art Museum of Catalonia). You can stroll along La Rambla, visit Park Güell and Casa Batlló, and enjoy tapas and seafood at affordable prices.\n",
+    "\n",
+    "Cost: Hostel dorms from €20/night (~ $23 USD), meals from €10-15 (~ $12-18 USD)\n",
+    "\n",
+    "3. **Vienna, Austria**: Vienna is a city with a strong cultural heritage, featuring many museums (e.g., the Kunsthistorisches Museum, the Albertina). You can visit famous landmarks like St. Stephen's Cathedral and Schönbrunn Palace, and enjoy coffee culture and pastry shops.\n",
+    "\n",
+    "Cost: Hostel dorms from €25/night (~ $29 USD), meals from €15-20 (~ $18-24 USD)\n",
+    "\n",
+    "4. **Lisbon, Portugal**: Lisbon is a charming city with a rich cultural history. Visit the National Pantheon, the Castle of São Jorge, and the Museum of Modern Art. Enjoy traditional Portuguese cuisine like bacalhau à brás (cod fritters) and pastéis de nata (egg tarts).\n",
+    "\n",
+    "Cost: Hostel dorms from €15/night (~ $17 USD), meals from €10-15 (~ $12-18 USD)\n",
+    "\n",
+    "5. **Helsinki, Finland**: Helsinki is a unique blend of Nordic design and cultural heritage. Visit the National Museum of Finland, the Ateneum Art Museum, and the Temppeliaukio Church. Enjoy traditional Finnish cuisine like karjalanpiirakka (Karelian pasties) and salmiakki (salty licorice).\n",
+    "\n",
+    "Cost: Hostel dorms from €30/night (~ $35 USD), meals from €15-25 (~ $18-29 USD)\n",
+    "\n",
+    "These destinations offer a great balance of culture, museums, and good food, while being relatively affordable for solo travelers. May is a great time to visit these cities, as the weather is generally mild and there are many festivals and events taking place.\n",
+    "\n",
+    "Which one catches your eye?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##Profil utilisateur\n",
     "\n",
     "On teste Ollama avec des profils utilisateurs différents pour voir la pertinence"
@@ -75,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -138,6 +173,45 @@
     "# Exemple de test :\n",
     "profil1 = \"Je cherche une destination de voyage pour une personne seule, avec un petit budget. Je préfère voyager au printemps. J’aime les musées, les balades en ville et la gastronomie locale.\"\n",
     "print(conseiller_voyage(profil1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recommandation avec profil utilisateur \n",
+    "\n",
+    "What a lovely profile! I've come up with three personalized travel recommendations that fit your preferences and budget. Here they are:\n",
+    "\n",
+    "**Destination 1: Porto, Portugal**\n",
+    "\n",
+    "Why: Porto is a charming city in northwest Portugal known for its rich cultural heritage, gastronomy, and stunning architecture. It's an excellent choice for solo travelers on a budget.\n",
+    "\n",
+    "* Must-see attractions:\n",
+    "\t+ Ribeira neighborhood with colorful tiles and historic buildings\n",
+    "\t+ Porto Cathedral (Sé do Porto)\n",
+    "\t+ Museum of Contemporary Art (Museu de Arte Contemporânea de Porto)\n",
+    "* Foodie highlights:\n",
+    "\t+ Try traditional Porto-style coffee at Café Majestic or Café Santiago\n",
+    "\t+ Sample the famous Port wine at a local winery or cellar\n",
+    "\t+ Enjoy a delicious lunch at a Fado music club, like Casa da Música\n",
+    "* Budget-friendly tips: Accommodation options range from budget-friendly guesthouses to affordable apartments. Take advantage of free walking tours and visit the city's many parks and gardens.\n",
+    "\n",
+    "**Destination 2: Budapest, Hungary**\n",
+    "\n",
+    "Why: This beautiful capital city is an excellent choice for solo travelers who love history, culture, and food. Spring is a lovely time to visit Budapest, with mild weather and fewer tourists than in the peak summer months.\n",
+    "\n",
+    "* Must-see attractions:\n",
+    "\t+ Buda Castle complex (Várnegyed)\n",
+    "\t+ Hungarian National Gallery (Magyar Nemzeti Galéria)\n",
+    "\t+ St. Stephen's Basilica\n",
+    "* Foodie highlights:\n",
+    "...\n",
+    "\t+ Explore the city's many tapas bars and enjoy some delicious small plates\n",
+    "* Budget-friendly tips: Valencia has a range of accommodation options, from hostels to budget-friendly hotels. Take advantage of free walking tours and visit the city's many parks and gardens.\n",
+    "\n",
+    "Each of these destinations offers a unique blend of culture, history, and gastronomy, making them perfect for solo travelers on a budget who love exploring new places.\n",
+    "Output is truncated. View as a scrollable element or open in a text editor. Adjust cell output settings..."
    ]
   }
  ],
