modifs nouveaux prompts Mistral

--- a/LLM_mistral.ipynb
+++ b/LLM_mistral.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PARTIE QUESTIONS DETAILLEES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +36,8 @@
      "output_type": "stream",
      "text": [
       "✅ Réponse :\n",
-      "Bonjour, c'est un plaisir de vous rencontrer. Comment ça va? (Hello, it's a pleasure to meet you. How are you?)\n"
+      "❌ Erreur lors de l'appel à Mistral :\n",
+      "'choices'\n"
      ]
     }
    ],
@@ -62,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "### ✈️ Génération de ta recommandation..."
+       "### 👋 Bienvenue dans l'assistant de voyage intelligent !"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -80,7 +88,7 @@
     {
      "data": {
       "text/markdown": [
-       "### ✅ Recommandation générée :"
+       "Je vais te poser quelques questions pour mieux cerner tes envies de voyage 🌍"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -92,41 +100,194 @@
     {
      "data": {
       "text/markdown": [
-       "```\n",
-       "Destination : Juras mountains en France\n",
-       "\n",
-       "Les Juras sont une région montagneuse située dans l'est de la France, parfaitement adaptée à votre profil de voyageur. Ce massif offre de belles randonnées pédestres adaptées au niveau de difficulté que vous souhaitez, en même temps que des paysages magnifiques.\n",
-       "\n",
-       "Itinéraire :\n",
-       "\n",
-       "* Jour 1 : Arrivée à la gare de Lons-le-Saunier ou à l'aéroport de Genève, puis transfert vers votre chalet situé dans les environs de Champagnole.\n",
-       "* Jour 2 à 6 : De belles randonnées quotidiennes, découvrez les lacs de Chalain, les cascades de la rivière Loue, le col des Rousses et le lac de Saint-Point.\n",
-       "* Jour 7 : Détente et visite du Château de Joux.\n",
-       "* Jour 8 à 9 : Continuez à explorer d'autres sentiers de randonnée voire une excursion en VTT dans les environs.\n",
-       "* Jour 10 : Transfert vers l'aéroport ou la gare de Lons-le-Saunier pour votre retour.\n",
-       "\n",
-       "Activités principales :\n",
-       "\n",
-       "* Randonnées pédestres\n",
-       "* Visite du Château de Joux\n",
-       "* VTT\n",
-       "\n",
-       "Hébergement :\n",
-       "\n",
-       "* Le Chalet L'Escale (https://www.chalet-lescales.fr/) - chalet de 4 personnes, offrant des vues imprenables sur les montagnes. Il est situé à 3 km du centre-ville de Champagnole, à 15 min à pied.\n",
-       "* Le Chalet du Mont-Verd (https://www.lechaletdumontverd.fr/) - chalet de 4 personnes, situé à 8 km de Champagnole et offrant des vues sur les montagnes du Jura.\n",
-       "\n",
-       "Justification de mes choix :\n",
-       "Les Juras sont une région montagneuse proche, facile d'accès et offrant des randonnées adaptées à tous les niveaux. De plus, en été, les journées sont claires et longues, ce qui permettra de profiter au maximum de ces belles montagnes. Le chalet est un hébergement très adapté pour votre séjour en couple et les animaux sont autorisés.\n",
-       "\n",
-       "Options alternatives :\n",
-       "\n",
-       "* Budget : Pour un budget plus faible, vous pouvez réserver un gîte d'étape dans le massif des Vosges ou une chambre d'hôtel à Lons-le-Saunier.\n",
-       "* Premium : Pour un voyage plus luxueux, vous pouvez réserver un chalet de montagne plus grand ou un hôtel de luxe à l'entrée du massif des Juras.\n",
-       "```"
+       "**1. Quel type de destination préfères-tu ?** *(plage, montagne, ville, campagne...)*"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b09941e0a114da0a77a921351116cb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : plage, montagne, ville...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**2. Quel est ton budget approximatif ?** *(faible, moyen, élevé, ou un montant)*"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae2b13154e8043ab9a08c96869ad1585",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : faible, 500€, moyen...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**3. À quelles dates veux-tu partir ?**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb1ffaa793a04c18a1659c8e546ec0ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : du 15 au 22 juillet')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**4. Quelles activités t’intéressent ?** *(randonnée, culture, détente...)*"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4dddd41e4c61427b9287f3ac009f5aae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : randonnée, musées, gastronomie...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**5. Quel type d’hébergement préfères-tu ?**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "225aaa3efd3c40f084b0ae7c036c54d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : hôtel, auberge, logement insolite...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**6. Avec qui voyages-tu ?** *(seul, en couple, en famille, entre amis...)*"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "940d28891508421faea06cb125e95019",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : seul, en couple, en famille...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**7. As-tu des contraintes particulières ?** *(enfants, animaux, santé...)*"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36ff8c81d9034281ae3a14dc6983e403",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='ex : animaux, enfants, mobilité réduite...')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58e20c6a3b6742f09eacf81597dd53ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='✨ Générer ma recommandation ✈️', style=ButtonStyle())"
       ]
      },
      "metadata": {},
@@ -158,7 +319,6 @@
     "destination = widgets.Text(placeholder=\"ex : plage, montagne, ville...\", description=\"\")\n",
     "budget = widgets.Text(placeholder=\"ex : faible, 500€, moyen...\", description=\"\")\n",
     "dates = widgets.Text(placeholder=\"ex : du 15 au 22 juillet\", description=\"\")\n",
-    "duree = widgets.Text(placeholder=\"ex : 7 jours\", description=\"\")\n",
     "interets = widgets.Text(placeholder=\"ex : randonnée, musées, gastronomie...\", description=\"\")\n",
     "hebergement = widgets.Text(placeholder=\"ex : hôtel, auberge, logement insolite...\", description=\"\")\n",
     "compagnie = widgets.Text(placeholder=\"ex : seul, en couple, en famille...\", description=\"\")\n",
@@ -174,19 +334,16 @@
     "display(Markdown(\"**3. À quelles dates veux-tu partir ?**\"))\n",
     "display(dates)\n",
     "\n",
-    "display(Markdown(\"**4. Pour combien de temps ?** *(en jours)*\"))\n",
-    "display(duree)\n",
-    "\n",
-    "display(Markdown(\"**5. Quelles activités t’intéressent ?** *(randonnée, culture, détente...)*\"))\n",
+    "display(Markdown(\"**4. Quelles activités t’intéressent ?** *(randonnée, culture, détente...)*\"))\n",
     "display(interets)\n",
     "\n",
-    "display(Markdown(\"**6. Quel type d’hébergement préfères-tu ?**\"))\n",
+    "display(Markdown(\"**5. Quel type d’hébergement préfères-tu ?**\"))\n",
     "display(hebergement)\n",
     "\n",
-    "display(Markdown(\"**7. Avec qui voyages-tu ?** *(seul, en couple, en famille, entre amis...)*\"))\n",
+    "display(Markdown(\"**6. Avec qui voyages-tu ?** *(seul, en couple, en famille, entre amis...)*\"))\n",
     "display(compagnie)\n",
     "\n",
-    "display(Markdown(\"**8. As-tu des contraintes particulières ?** *(enfants, animaux, santé...)*\"))\n",
+    "display(Markdown(\"**7. As-tu des contraintes particulières ?** *(enfants, animaux, santé...)*\"))\n",
     "display(contraintes)\n",
     "\n",
     "# Bouton de validation\n",
@@ -201,7 +358,6 @@
     "    Type de destination : {destination.value}\n",
     "    Budget : {budget.value}\n",
     "    Dates : {dates.value}\n",
-    "    Durée : {duree.value} jours\n",
     "    Centres d’intérêt : {interets.value}\n",
     "    Hébergement souhaité : {hebergement.value}\n",
     "    Compagnie : {compagnie.value}\n",
@@ -245,7 +401,81 @@
     "\n",
     "# Attacher la fonction au bouton\n",
     "bouton.on_click(on_button_clicked)\n",
-    "display(bouton)"
+    "display(bouton)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PARTIE NON GUIDEE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test Mistral (comparé à Ollama avec le même prompt) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pour une destination de voyage en mai pour une personne seule, qui apprécie la culture, les musées, la bonne nourriture et est à un budget moyen, je vous recommande Venise en Italie.\n",
+      "\n",
+      "Venise est une ville unique dans le monde, qui offre une expérience culturelle inoubliable. Elle est repleine de musées et de galeries d'art de grande qualité, dont le Museo Correr, le Museo di Palazzo Grassi et le Peggy Guggenheim Collection.\n",
+      "\n",
+      "En plus de ses musées, Venise est repleine de points de vue magnifiques, de places et de bâtiments historiques qui sont un plaisir à découvrir. La ville est repleine de petits restaurants et de trattorias qui offrent une cuisine délicieuse, dont la spaghetti à la vongole, le risotto à la gorgonzola et le polenta aux champignons.\n",
+      "\n",
+      "En outre, Venise est une ville qui se découvre à pied et en gondole, ce qui en fait une expérience unique. Le budget moyen devrait couvrir les frais de logement, de déplacements, de musées et de repas.\n",
+      "\n",
+      "Je vous souhaite un excellent voyage et une expérience inoubliable à Venise!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import httpx\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Charger la clé API une seule fois au démarrage du script\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"MISTRAL_API_KEY\")\n",
+    "\n",
+    "def get_recommendation_from_mistral(prompt, model=\"mistral-tiny\"):\n",
+    "    url = \"https://api.mistral.ai/v1/chat/completions\"\n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"Bearer {api_key}\",\n",
+    "        \"Content-Type\": \"application/json\"\n",
+    "    }\n",
+    "\n",
+    "    payload = {\n",
+    "        \"model\": model,\n",
+    "        \"messages\": [\n",
+    "            {\"role\": \"system\", \"content\": \"Tu es un assistant expert en voyages.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        \"temperature\": 0.8,\n",
+    "        \"max_tokens\": 700\n",
+    "    }\n",
+    "\n",
+    "    response = httpx.post(url, headers=headers, data=json.dumps(payload), timeout=30)\n",
+    "    response.raise_for_status()\n",
+    "    return response.json()['choices'][0]['message']['content']\n",
+    "\n",
+    "# Exemple de prompt\n",
+    "prompt = \"\"\"Je cherche une destination de voyage pour une personne seule en mai,\n",
+    "avec un budget moyen, qui aime la culture, les musées et la bonne nourriture.\"\"\"\n",
+    "\n",
+    "reponse = get_recommendation_from_mistral(prompt)\n",
+    "print(reponse)"
    ]
   }
  ],
@@ -265,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
