--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -2,40 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What a great combination of interests! I'd be happy to suggest some destinations for a solo traveler like you in May, with a moderate budget, who loves culture, museums, and good food.\n",
+      "A traveler looking for a cultural experience with good food and museums on a moderate budget! I've got some great suggestions for you:\n",
       "\n",
-      "Here are a few options:\n",
+      "1. **Prague, Czech Republic**: Prague is an ideal destination for solo travelers. The city has a rich cultural heritage, with many museums like the National Museum of Czech Republic and the Jewish Museum. Enjoy traditional Czech cuisine like goulash, dumplings, and beer at one of the many affordable restaurants.\n",
+      "2. **Lisbon, Portugal**: Lisbon is a charming city with a vibrant cultural scene. Visit the Calouste Gulbenkian Museum, which features an impressive collection of art and artifacts from around the world. Savor traditional Portuguese dishes like bacalhau à brás (cod with potatoes and onions) at one of the many affordable eateries.\n",
+      "3. **Barcelona, Spain**: Barcelona is a cultural hub with plenty of museums to explore, such as the Picasso Museum and the National Art Museum of Catalonia. Enjoy tapas and local cuisine at La Boqueria Market or try some delicious paella at a mid-range restaurant.\n",
+      "4. **Vienna, Austria**: Vienna is a city steeped in culture and history. Visit the Kunsthistorisches Museum (Museum of Fine Arts), which features an impressive collection of art from around the world. Indulge in traditional Austrian cuisine like Wiener Schnitzel and apple strudel at one of the many cozy cafes or restaurants.\n",
+      "5. **Krakow, Poland**: Krakow is a beautiful city with a rich cultural heritage. Visit the National Museum of Poland, which features an impressive collection of art and artifacts from Polish history. Enjoy traditional Polish cuisine like pierogi (dumplings) and bigos (hunter's stew) at one of the many affordable restaurants.\n",
+      "6. **Stockholm, Sweden**: Stockholm is a design lover's paradise with many museums to explore, such as the Vasa Museum and the Moderna Museum. Enjoy traditional Swedish cuisine like meatballs and gravlax at one of the many cozy restaurants or cafes.\n",
       "\n",
-      "1. **Prague, Czech Republic**: Prague is an excellent choice for a solo traveler. The city has a rich cultural heritage, with numerous museums (e.g., the National Museum of Prague) and historical landmarks like Charles Bridge and St. Vitus Cathedral. You can enjoy traditional Czech cuisine like goulash, dumplings, and pastries at reasonable prices.\n",
+      "All of these destinations are relatively affordable for solo travelers on a moderate budget:\n",
       "\n",
-      "Cost: Hostel dorms from €15/night (~ $17 USD), meals from €5-10 (~ $6-12 USD)\n",
+      "* Hostels: €15-€30 per night (around $17-$34 USD)\n",
+      "* Budget restaurants: €10-€20 per meal (around $11-$22 USD)\n",
+      "* Museum tickets: €5-€15 per person (around $6-$17 USD)\n",
       "\n",
-      "2. **Barcelona, Spain**: Barcelona is a vibrant city with a wide range of cultural attractions (e.g., the Picasso Museum, the National Art Museum of Catalonia). You can stroll along La Rambla, visit Park Güell and Casa Batlló, and enjoy tapas and seafood at affordable prices.\n",
-      "\n",
-      "Cost: Hostel dorms from €20/night (~ $23 USD), meals from €10-15 (~ $12-18 USD)\n",
-      "\n",
-      "3. **Vienna, Austria**: Vienna is a city with a strong cultural heritage, featuring many museums (e.g., the Kunsthistorisches Museum, the Albertina). You can visit famous landmarks like St. Stephen's Cathedral and Schönbrunn Palace, and enjoy coffee culture and pastry shops.\n",
-      "\n",
-      "Cost: Hostel dorms from €25/night (~ $29 USD), meals from €15-20 (~ $18-24 USD)\n",
-      "\n",
-      "4. **Lisbon, Portugal**: Lisbon is a charming city with a rich cultural history. Visit the National Pantheon, the Castle of São Jorge, and the Museum of Modern Art. Enjoy traditional Portuguese cuisine like bacalhau à brás (cod fritters) and pastéis de nata (egg tarts).\n",
-      "\n",
-      "Cost: Hostel dorms from €15/night (~ $17 USD), meals from €10-15 (~ $12-18 USD)\n",
-      "\n",
-      "5. **Helsinki, Finland**: Helsinki is a unique blend of Nordic design and cultural heritage. Visit the National Museum of Finland, the Ateneum Art Museum, and the Temppeliaukio Church. Enjoy traditional Finnish cuisine like karjalanpiirakka (Karelian pasties) and salmiakki (salty licorice).\n",
-      "\n",
-      "Cost: Hostel dorms from €30/night (~ $35 USD), meals from €15-25 (~ $18-29 USD)\n",
-      "\n",
-      "These destinations offer a great balance of culture, museums, and good food, while being relatively affordable for solo travelers. May is a great time to visit these cities, as the weather is generally mild and there are many festivals and events taking place.\n",
-      "\n",
-      "Which one catches your eye?\n"
+      "May is a great time to visit these destinations, with mild weather and fewer tourists than the peak summer months. Have a wonderful trip!\n"
      ]
     }
    ],
@@ -157,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
